@@ -2,6 +2,7 @@
  OSM2World 0.1.8                                                     2011-??-?? 
 --------------------------------------------------------------------------------
  
+ * support for roof shapes (as ridge/edge geometry)
  * bugfix in ForceEC. (duplicate points with ele) solves missing walls in POVRay
  
  
